--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://ceramey1997.github.io/cole-ramey-resume",
+  "homepage": "https://ceramey1997.github.io/cole-ramey-resume",
   "name": "cole-ramey-resume",
   "version": "0.1.0",
   "private": true,
